--- a/myrunstats-vite/package.json
+++ b/myrunstats-vite/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.31.0",
+    "@google/generative-ai": "^0.24.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
